--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tiptap/extension-collaboration": "^3.14.0",
     "@tiptap/extension-collaboration-caret": "^3.14.0",
     "@tiptap/extension-emoji": "^3.14.0",
-    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-table": "^3.15.2",
     "@vueuse/core": "^14.1.0",
     "ai": "^6.0.6",
     "nuxt": "^4.2.2",
