--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@ai-sdk/vue": "^3.0.6",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/simple-icons": "^1.2.63",
-    "@nuxt/ui": "^4.3.0",
+    "@nuxt/ui": "https://pkg.pr.new/@nuxt/ui@db04197",
     "@nuxthub/core": "^0.10.4",
-    "@tiptap/extension-collaboration": "^3.14.0",
-    "@tiptap/extension-collaboration-caret": "^3.14.0",
-    "@tiptap/extension-emoji": "^3.14.0",
-    "@tiptap/extension-table": "^3.15.2",
+    "@tiptap/extension-collaboration": "^3.15.3",
+    "@tiptap/extension-collaboration-caret": "^3.15.3",
+    "@tiptap/extension-emoji": "^3.15.3",
+    "@tiptap/extension-table": "^3.15.3",
     "@vercel/blob": "^2.0.0",
     "@vueuse/core": "^14.1.0",
     "ai": "^6.0.6",
